<resources>
<<<<<<< HEAD
    <string name="app_name">ViewPropertiesTest</string>
    <string name="btn_1">NCT DREAM</string>
    <string name="btn_2">SSG LANDERS</string>
    <string name="btn_3">KEPCO VIXTORM</string>
    <string name="btn_4">PARK SUNG-HAN</string>
    <string name="btn_5">LIM SUNG-JIN</string>
    <string name="txt1">이건 텍스트뷰입니다</string>
    <string name="color_button"></string>
    <string name="btn__2">PARK SUNG-HAN</string>
    <string name="text_1">textSize 속성</string>
    <string name="text_2">textColor 속성</string>
    <string name="text_3">textStyle 속성</string>
    <string name="text_4">typeface 속성</string>
    <string name="text_5">single 속성 single 속성 single 속성 single 속성 single 속성</string>
=======
    <string name="app_name">CodeLayout</string>
    <string name="greeting">박지성, 박성한, 임성진</string>
    <string name="btn1_text">한국전력 빅스톰</string>
    <string name="btn2_text">SSG LANDERS</string>
    <string name="btn3_text">NCT DREAM</string>
    <string name="btn4_text">KGC 인삼공사 배구단</string>
>>>>>>> a3b44898be32ede7bf82ee5f892c1000a337ba53
</resources>