<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosequartz"
        android:textColor="@color/black"
        android:text="@string/btn_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:gravity="left"
        android:background="#00ff0000"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_button"
        android:background="@color/Serenity"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/btn__2"
        android:textColor="@color/black"
        android:enabled="false"
        />


</LinearLayout>